@@ -27,6 +27,7 @@ import java.awt.image.ColorModel;
 import java.io.DataInputStream;
 import java.io.File;
 import java.io.FileInputStream;
+import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
 import java.util.Enumeration;
@@ -69,8 +70,8 @@ public class ServerFile extends Server implements XMLConsumer {
    // variable de travail pour le parsing des "circle"
    private Coord circleCenter;
 
-@Override
-protected void createChaine() {
+   @Override
+   protected void createChaine() {
       super.createChaine();
       description   = aladin.chaine.getString("FILEINFO");
       titre  = aladin.chaine.getString("FILETITLE");
@@ -81,16 +82,16 @@ protected void createChaine() {
       BROWSE = aladin.chaine.getString("FILEBROWSE");
    }
 
-  /** Initialisation des variables propres */
+   /** Initialisation des variables propres */
    protected void init() {
       type = APPLI;
       aladinLogo = "MyDataLogo.gif";
    }
 
 
- /** Creation du formulaire d'interrogation des images sur le disque
-   * @param aladin reference
-   */
+   /** Creation du formulaire d'interrogation des images sur le disque
+    * @param aladin reference
+    */
    protected ServerFile(Aladin aladin) {
       this.aladin = aladin;
       createChaine();
@@ -140,32 +141,32 @@ protected void createChaine() {
 
       // Indication du component à maximiser
       setMaxComp(sc);
-      }
+   }
 
    /** Retourne true si le serveur correspond a la chaine
     * passee en parametre. Il a fallu deriver cette methode
     * pour garder la compatibilite avec "local" et "MyData"
     * @return true: Ok c'est ce serveur.
     */
-    @Override
-    protected boolean is(String s) {
-       if( s.equalsIgnoreCase("Local") || s.equalsIgnoreCase("MyData") || s.equalsIgnoreCase("File")) return true;
-       return super.is(s);
-    }
+   @Override
+   protected boolean is(String s) {
+      if( s.equalsIgnoreCase("Local") || s.equalsIgnoreCase("MyData") || s.equalsIgnoreCase("File")) return true;
+      return super.is(s);
+   }
 
    /** Creation d'un plan de maniere generique
     * Le target et radius sont ignores, criteria contient
     * le nom du fichier ou l'URL
     */
    @Override
-protected int createPlane(String target,String radius,String criteria,
-   				 String label, String origin) {
+   protected int createPlane(String target,String radius,String criteria,
+         String label, String origin) {
       String f=criteria;
 
       Tok st = new Tok(criteria," ,");
-         f = st.nextToken();
+      f = st.nextToken();
       if( st.hasMoreTokens() ) label = st.nextToken();
-            if( st.hasMoreTokens() ) origin = st.nextToken();
+      if( st.hasMoreTokens() ) origin = st.nextToken();
 
       // le fichier (ou url) peut etre suivi d'un mime type
       // avec un blanc comme separateur, celui-ci sera simplement ignore
@@ -180,242 +181,295 @@ protected int createPlane(String target,String radius,String criteria,
       return creatLocalPlane(f,label,origin,null,null,null,this);
    }
 
-  /** Creation d'un plan issu d'un chargement d'un fichier AJ, fits ou autre
-   * Le choix se fait en fonction de l'extension du nom de fichier
-   * 	.aj	-> AJ
-   *	.fits	-> FITS
-   *	autre	-> XML + TSV
-   * @param f path du fichier
-   */
-//    protected int creatLocalPlane(String f,String label,String origin) {
-//    	return creatLocalPlane(f,label,origin,null,null,null);
-//    }
-//
-//    protected int creatLocalPlane(InputStream is, String label,String origin) {
-//    	return creatLocalPlane(null,label,origin,null,null,is);
-//    }
+   /** Creation d'un plan issu d'un chargement d'un fichier AJ, fits ou autre
+    * Le choix se fait en fonction de l'extension du nom de fichier
+    * 	.aj	-> AJ
+    *	.fits	-> FITS
+    *	autre	-> XML + TSV
+    * @param f path du fichier
+    */
+   //    protected int creatLocalPlane(String f,String label,String origin) {
+   //    	return creatLocalPlane(f,label,origin,null,null,null);
+   //    }
+   //
+   //    protected int creatLocalPlane(InputStream is, String label,String origin) {
+   //    	return creatLocalPlane(null,label,origin,null,null,is);
+   //    }
 
-    /** Retourne le nom du fichier ou de l'url en enlevant un éventuel suffixe
-     * [nnn] indiquant une extension particulière d'un MEF */
-    private String getNameWithoutBrackets(String s) {
-       if( s==null ) return null;
-       int n = s.length();
-       if( n<4 || s.charAt(n-1)!=']' ) return s;
-       int pos = s.lastIndexOf('[');
-       if( pos<0 ) return s;
-       try {
-          n = Integer.parseInt(s.substring(pos+1,n-1));
-          return s.substring(0,pos);
-       } catch(Exception e) { }
-       return s;
-    }
-
-  /** Creation d'un plan issu d'un chargement d'un fichier AJ, fits ou autre
-   * @param f path du fichier
-   * @param resNode noeud décrivant le fichier à charger, peut être <i>null</i>
-   */
-    protected int creatLocalPlane(String f,String label,String origin, Obj o, ResourceNode resNode,InputStream is,Server server) {
-      setSync(false);
-      int n=0;
-      MyInputStream in;
-      long type;
-      URL u=null;
-
-      if( f!=null ) f=aladin.getFullFileName(f);
-
-      waitCursor();
+   /** Retourne le nom du fichier ou de l'url en enlevant un éventuel suffixe
+    * [nnn] indiquant une extension particulière d'un MEF */
+   private String getNameWithoutBrackets(String s) {
+      if( s==null ) return null;
+      int n = s.length();
+      if( n<4 || s.charAt(n-1)!=']' ) return s;
+      int pos = s.lastIndexOf('[');
+      if( pos<0 ) return s;
       try {
-         if( label==null ) {
-            int i = f.lastIndexOf(f.startsWith("http:")||f.startsWith("https:")||f.startsWith("ftp:") ? "/"
-                   : Util.FS);
-            label=(i>=0)?f.substring(i+1):f;
+         n = Integer.parseInt(s.substring(pos+1,n-1));
+         return s.substring(0,pos);
+      } catch(Exception e) { }
+      return s;
+   }
 
-            // Suppression d'une extension éventuelle
-            i = label.lastIndexOf('.');
-            if( i>0 && label.length()-i<=5 ) label = label.substring(0,i);
-         }
+   /** Creation d'un plan issu d'un chargement d'un fichier AJ, fits ou autre
+    * @param f path du fichier
+    * @param resNode noeud décrivant le fichier à charger, peut être <i>null</i>
+    */
+   protected int creatLocalPlane(String f,String label,String origin, Obj o, ResourceNode resNode,InputStream is,Server server) {
+      String serverTaskId = aladin.synchroServer.start("ServerFile.creatLocalPlane/"+label);
+      try {
+//         setSync(false);
+         int n=0;
+         MyInputStream in;
+         long type;
+         URL u=null;
+         boolean localFile=false;
 
-         // Analyse du contenu d'un répertoire local
-         if( is==null && !(f.startsWith("http:") || f.startsWith("https:"))) {
-            try {
-               File x = new File(f);
-               if( x.isDirectory() ) {
-                  setSync(true);
-Aladin.trace(4,"ServerFile.creatLocalPlane("+f+"...) => detect: DIR");
-                  if( PlanBG.isPlanBG(f) ) n=aladin.calque.newPlanBG(f,label,null,null);
-                  else {
-                     aladin.log("load", "dir");
-                     updateMetaData(new MyInputStream((new IDHAGenerator()).getStream(x,this)),this,"",null);
+         if( f!=null ) f=aladin.getFullFileName(f);
+
+         waitCursor();
+         try {
+            if( label==null ) {
+               int i = f.lastIndexOf(f.startsWith("http:")||f.startsWith("https:")||f.startsWith("ftp:") ? "/"
+                     : Util.FS);
+               label=(i>=0)?f.substring(i+1):f;
+
+               // Suppression d'une extension éventuelle
+               i = label.lastIndexOf('.');
+               if( i>0 && label.length()-i<=5 ) label = label.substring(0,i);
+            }
+
+            // Analyse du contenu d'un répertoire local
+            if( is==null && !(f.startsWith("http:") || f.startsWith("https:"))) {
+               try {
+                  final File x = new File(f);
+                  if( x.isDirectory() ) {
+//                     setSync(true);
+                     Aladin.trace(4,"ServerFile.creatLocalPlane("+f+"...) => detect: DIR");
+                     if( PlanBG.isPlanBG(f) ) {
+
+                        // Catalogue ?
+                        if( (new File(f+"/Norder3/Allsky.xml")).exists() ) {
+                           TreeNodeAllsky gSky;
+                           try { gSky = new TreeNodeAllsky(aladin, f); }
+                           catch( Exception e ) {
+                              aladin.trace(4, "ServerFile.creatLocalPlane(...) Allsky properties file not found, assume default params");
+                              gSky = new TreeNodeAllsky(aladin, null, null, null, null, null, null, null, null, null, f, "15 cat");
+                           }
+                           n=aladin.calque.newPlanBG(gSky,label,null,null);
+
+                           // ou Image
+                        } else n=aladin.calque.newPlanBG(f,label,null,null);
+                     }
+                     else {
+                        final ServerFile th = this;
+                        (new Thread(){
+                           public void run() {
+                              try {
+                                 aladin.log("load", "dir");
+                                 MyInputStream mi = new MyInputStream((new IDHAGenerator()).getStream(x,th)); 
+                                 updateMetaData(mi,th,"",null);
+                                 mi.close();
+                              } catch( IOException e ) {
+                                 e.printStackTrace();
+                              }
+                              defaultCursor();
+                           }
+                        }).start();
+                     }
+                     return n;
                   }
+               } catch( Exception e) {
                   defaultCursor();
+                  e.printStackTrace();
                   return n;
                }
-             } catch( Exception e) {
-                 e.printStackTrace();
-                 return n;
-             }
-         }
-
-         if( origin==null ) origin=f;
-
-         // Pour loguer
-         String mode= is==null ? "file" : "stream";
-
-         // Pas de verification de la redondance pour les fichiers locaux
-         // mais tout de meme affichage des messages divers
-         flagVerif=false;
-         verif(0,null,null,null);
-
-         // gestion des URL file:... sous Windows
-         if (f!=null && f.startsWith("file:")) {
-             f = f.replaceAll("\\\\", "/");
-         }
-
-         //Obtention du stream (donnee locale ou distante)
-         if( is==null && (f.startsWith("http:")||f.startsWith("https:")) ) {
-            u = aladin.glu.getURL("Http",getNameWithoutBrackets(f),true,true);
-            in = Util.openStream(u);
-            mode="http";
-         }
-
-         // support FTP --> ça fonctionne avec par exemple une URL du type ftp://user:passwd@server/....
-         else if( is==null && f.startsWith("ftp://") ) {
-            u = new URL(getNameWithoutBrackets(f));
-            in = Util.openStream(u);
-            mode="ftp";
-         }
-         // URL du type file://...
-         else if( is==null && f.startsWith("file:/") ) {
-             u = new URL(getNameWithoutBrackets(f));
-             in = Util.openStream(u);
-             mode="file";
-         }
-
-         else {
-            if( is==null ) {
-               Aladin.trace(3,"Opening "+getNameWithoutBrackets(f));
-               in = new MyInputStream(new FileInputStream( getNameWithoutBrackets(f) ));
             }
+
+            if( origin==null ) origin=f;
+
+            // Pour loguer
+            String mode= is==null ? "file" : "stream";
+
+            // Pas de verification de la redondance pour les fichiers locaux
+            // mais tout de meme affichage des messages divers
+            flagVerif=false;
+            verif(0,null,null,null);
+
+            // gestion des URL file:... sous Windows
+            if (f!=null && f.startsWith("file:")) {
+               f = f.replaceAll("\\\\", "/");
+            }
+
+            //Obtention du stream (donnee locale ou distante)
+            if( is==null && (f.startsWith("http:")||f.startsWith("https:")) ) {
+               u = aladin.glu.getURL("Http",getNameWithoutBrackets(f),true,true);
+               in = Util.openStream(u);
+               mode="http";
+            }
+
+            // support FTP --> ça fonctionne avec par exemple une URL du type ftp://user:passwd@server/....
+            else if( is==null && f.startsWith("ftp://") ) {
+               u = new URL(getNameWithoutBrackets(f));
+               in = Util.openStream(u);
+               mode="ftp";
+            }
+            // URL du type file://...
+            else if( is==null && f.startsWith("file:/") ) {
+               localFile=true;
+               u = new URL(getNameWithoutBrackets(f));
+               in = Util.openStream(u);
+               mode="file";
+            }
+
             else {
-               // Dans le cas d'une continuation (FITS EXTENSION)
-               if( is instanceof MyInputStream ) in = (MyInputStream)is;
+               if( is==null ) {
+                  localFile=true;
+                  Aladin.trace(3,"Opening "+getNameWithoutBrackets(f));
+                  in = new MyInputStream(new FileInputStream( getNameWithoutBrackets(f) ));
+               }
+               else {
+                  // Dans le cas d'une continuation (FITS EXTENSION)
+                  if( is instanceof MyInputStream ) in = (MyInputStream)is;
 
-               // Dans le cas normal
-               else in = new MyInputStream(is);
+                  // Dans le cas normal
+                  else in = new MyInputStream(is);
+               }
             }
-         }
-         in = in.startRead();
-         type = in.getType();
+            in = in.startRead();
+            type = in.getType();
 
-         // Petit rajouti pour reconnaitre l'extension AJS pour les scripts Aladin
-         if( f!=null && f.endsWith(".ajs") ) type |= MyInputStream.AJS;
+            // Petit rajouti pour reconnaitre l'extension AJS pour les scripts Aladin
+            if( f!=null && f.endsWith(".ajs") ) type |= MyInputStream.AJS;
 
-         String t = in.decodeType(type);
-Aladin.trace(3,(f==null?"stream":f)+" => detect: "+t);
-         aladin.log("load",mode+t);
+            // Petit rajouti pour reconnaitre l'extension REG pour les regions DS9
+            if( f!=null && f.endsWith(".reg") ) type |= MyInputStream.AJS;
 
-         if( (type & MyInputStream.AJS|type & MyInputStream.AJSx|MyInputStream.UNKNOWN)!=0) aladin.command.readFromStream(in);
-         else if( (type & MyInputStream.AJ)!=0) loadAJ(in);
-         else if( (type & MyInputStream.IDHA)!=0) updateMetaData(in,server,"",null);
-         else if( (type & MyInputStream.SIA_SSA)!=0)  updateMetaData(in,server,"",null);
-         else if( (type & MyInputStream.HPX)!=0 ) {
-            n=aladin.calque.newPlanHealpix(f,in,label,PlanBG.DRAWPIXEL,0, false);
-         }
-         else if( (type & MyInputStream.FITS)!=0 && (type & (MyInputStream.RGB|MyInputStream.ARGB))!=0 ) {
-            if( u!=null ) {
-               n=aladin.calque.newPlanImageRGB(u,in,PlanImage.OTHER,
-                     label,null,f, origin,
-                     PlanImage.UNKNOWN,PlanImage.UNDEF,
-                     null,resNode);
-            } else n=aladin.calque.newPlanImageRGB(f,null,in,resNode);
-         }
-         else if( (type & MyInputStream.XFITS)!=0) {
-            aladin.calque.newFitsExt(f,in,label,o);
-            n=1;
-         }
-         else if( (type & (MyInputStream.FITS|MyInputStream.PDS))!=0) {
-            if( u!=null ) {
-               n=aladin.calque.newPlanImage(u,in,PlanImage.OTHER,
-                  label,null,f, origin,
-                  PlanImage.UNKNOWN,PlanImage.UNDEF,
-                  o,resNode);
-            } else 
-               n=aladin.calque.newPlanImage(f,in,label,origin,o,resNode);
-         }
-         else if( (type & MyInputStream.FOV_ONLY) != 0 ) {
-         	// un nouveau plan sera créé sur la pile si la description contient les PARAM de position
-         	boolean newPlane = (n=aladin.processFovVOTable(in,null,true))>=0;
-         	// si on a juste ajouté un FOV à la liste des FOV chargés,
-         	// on se place sur cet onglet et on sélectionne le FOV en question
-         	if( !newPlane ) {
-         	     n=-2;  // Pour éviter une erreur via VOAPP (--> c'est du propre !)
-         		 aladin.dialog.setCurrent(ServerDialog.FIELD);
-         		((ServerFoV)aladin.dialog.server[ServerDialog.FIELD]).selectFOV(ServerFoV.idLastRegistered);
-         	}
-         }
-         else if( (type & (MyInputStream.ASTRORES|MyInputStream.VOTABLE|
-               MyInputStream.CSV|MyInputStream.BSV|MyInputStream.IPAC))!=0 ) {
-            if( u!=null ) n=aladin.calque.newPlanCatalog(u,in,label,"",f,null,server);
-            else if( f!=null) n=aladin.calque.newPlanCatalog(f,in);
-            else n=aladin.calque.newPlanCatalog(in,label,origin);
+            String t = in.decodeType(type);
+            Aladin.trace(3,(f==null?"stream":f)+" => detect: "+t);
+            aladin.log("load",mode+t);
 
-         // C'est peut être une image native ?
-         } else if( (type & MyInputStream.NativeImage())!=0 ) {
-            if( u!=null ) {
-                n=aladin.calque.newPlanImageColor(u,in,PlanImage.OTHER,
-                   label,null,f, origin,
-                   PlanImage.UNKNOWN,PlanImage.UNDEF,
-                   o,resNode);
-            } else n=aladin.calque.newPlanImageColor(f,null,in,resNode);
+            if( (type & MyInputStream.AJS|type & MyInputStream.AJSx|MyInputStream.UNKNOWN)!=0) aladin.command.readFromStream(in);
+            else if( (type & MyInputStream.AJ)!=0) loadAJ(in);
+            else if( (type & MyInputStream.IDHA)!=0) updateMetaData(in,server,"",null);
+            else if( (type & MyInputStream.SIA_SSA)!=0)  updateMetaData(in,server,"",null);
 
-         // C'est peut être un dico GLU ?
-         } else if( (type & MyInputStream.GLU)!=0 ) {
-            if( aladin.glu.loadGluDic(new DataInputStream(in), false) ) {
-               aladin.glu.reload(false);
+            else if( (type & MyInputStream.HPXMOC)!=0 ) {
+               n=aladin.calque.newPlaMOC(in,label);
             }
+            else if( (type & MyInputStream.FITS)!=0 && (type & MyInputStream.RGB)!=0 ) {
+               if( u!=null ) {
+                  n=aladin.calque.newPlanImageRGB(u,in,PlanImage.OTHER,
+                        label,null,f, origin,
+                        PlanImage.UNKNOWN,PlanImage.UNDEF,
+                        null,resNode);
+               } else n=aladin.calque.newPlanImageRGB(f,null,in,resNode);
+            }
+            else if( (type & MyInputStream.HEALPIX)!=0 ) {
+               n=aladin.calque.newPlanHealpix(f,in,label,PlanBG.DRAWPIXEL,0, false);
+            }
+            else if( (type & MyInputStream.XFITS)!=0) {
+               aladin.calque.newFitsExt(f,in,label,o);
+               n=1;
+            }
+            else if( (type & (MyInputStream.FITS|MyInputStream.PDS))!=0) {
+               if( u!=null ) {
+                  n=aladin.calque.newPlanImage(u,in,PlanImage.OTHER,
+                        label,null,f, origin,
+                        PlanImage.UNKNOWN,PlanImage.UNDEF,
+                        o,resNode);
+               } else 
+                  n=aladin.calque.newPlanImage(f,in,label,origin,o,resNode);
+            }
+            else if( (type & MyInputStream.FOV_ONLY) != 0 ) {
+               // un nouveau plan sera créé sur la pile si la description contient les PARAM de position
+               boolean newPlane = (n=aladin.processFovVOTable(in,null,true))>=0;
+               // si on a juste ajouté un FOV à la liste des FOV chargés,
+               // on se place sur cet onglet et on sélectionne le FOV en question
+               if( !newPlane ) {
+                  n=-2;  // Pour éviter une erreur via VOAPP (--> c'est du propre !)
+                  aladin.dialog.setCurrent(ServerDialog.FIELD);
+                  ((ServerFoV)aladin.dialog.server[ServerDialog.FIELD]).selectFOV(ServerFoV.idLastRegistered);
+               }
+            }
+            else if( (type & (MyInputStream.ASTRORES|MyInputStream.VOTABLE|
+                  MyInputStream.CSV|MyInputStream.BSV|MyInputStream.IPAC))!=0 ) {
+               if( u!=null ) n=aladin.calque.newPlanCatalog(u,in,label,"",f,null,server);
+               else if( f!=null) n=aladin.calque.newPlanCatalog(f,in);
+               else n=aladin.calque.newPlanCatalog(in,label,origin);
 
-         // C'est peut être un planBG via HTTP
-         } else if( mode.equals("http") && f!=null ) {
-            u = new URL(f+"/Norder3/Allsky.jpg");
-            if( Util.isUrlResponding(u) 
-                  || Util.isUrlResponding(new URL(f+"/Norder3/Allsky.fits")) ) n=aladin.calque.newPlanBG(new URL(f),label,null,null);
-            else throw new Exception("Data format not recognized");
-  
-         } else {
-            throw new Exception("Data format not recognized");
-         }
-         aladin.endMsg();
+               // C'est peut être une image native ?
+            } else if( (type & MyInputStream.NativeImage())!=0 ) {
+               if( u!=null ) {
+                  n=aladin.calque.newPlanImageColor(u,in,PlanImage.OTHER,
+                        label,null,f, origin,
+                        PlanImage.UNKNOWN,PlanImage.UNDEF,
+                        o,resNode);
+               } else n=aladin.calque.newPlanImageColor(f,null,in,resNode);
 
-         // Dans le cas de Meta-donnee (SIA ou IDHA) on va automatiquement ouvrir
-         // et positionner la fenetre des formulaires toFront
-         if( (type & (MyInputStream.SIA_SSA|MyInputStream.IDHA))!=0 ) {
-            aladin.dialog.show();
-            aladin.dialog.setCurrent(aladinLabel);
+               // C'est peut être un dico GLU ?
+            } else if( (type & MyInputStream.GLU)!=0 ) {
+               if( aladin.glu.loadGluDic(new DataInputStream(in), false,localFile) ) {
+                  aladin.glu.reload(false);
+               }
+
+               // C'est peut être un planBG via HTTP
+            } else if( mode.equals("http") && f!=null && f.indexOf('?')<0 ) {
+
+               // images ?
+               if( Util.isUrlResponding(new URL(f+"/Norder3/Allsky.jpg"))
+                     || Util.isUrlResponding(new URL(f+"/Norder3/Allsky.fits"))
+                     ) n=aladin.calque.newPlanBG(new URL(f),label,null,null);
+
+               // ou catalogue ?
+               else if( Util.isUrlResponding(new URL(f+"/Norder3/Allsky.xml")) ) {
+                  TreeNodeAllsky gSky;
+                  try { gSky = new TreeNodeAllsky(aladin, f); }
+                  catch( Exception e ) {
+                     aladin.trace(4, "ServerFile.creatLocalPlane(...) Allsky properties file not found, assume default params");
+                     gSky = new TreeNodeAllsky(aladin, null, null, f, null, null, null, null, null, null, null, "15 cat");
+                  }
+                  n=aladin.calque.newPlanBG(gSky,label,null,null);
+               }
+
+               else throw new Exception("Data format not recognized");
+
+            } else {
+               throw new Exception("Data format not recognized");
+            }
+            aladin.endMsg();
+
+            // Dans le cas de Meta-donnee (SIA ou IDHA) on va automatiquement ouvrir
+            // et positionner la fenetre des formulaires toFront
+            if( (type & (MyInputStream.SIA_SSA|MyInputStream.IDHA))!=0 ) {
+               aladin.dialog.show();
+               aladin.dialog.setCurrent(aladinLabel);
+            }
+         } catch(Exception e) {
+            e.printStackTrace();
+            Aladin.warning(this,""+e,1);
+            defaultCursor();
+            ball.setMode(Ball.NOK);
+//            setSync(true);
+            return -1;
          }
-      } catch(Exception e) {
-          e.printStackTrace();
-         Aladin.warning(this,""+e,1);
          defaultCursor();
-         ball.setMode(Ball.NOK);
-         setSync(true);
-         return -1;
-      }
-      defaultCursor();
-      setSync(true);
-      return n;
+//         setSync(true);
+         return n;
+      } finally { aladin.synchroServer.stop(serverTaskId); }
    }
 
    String of="";   // Precedente chaine dans le champ de saisie
 
    @Override
-protected void setInitialFocus() {
+   protected void setInitialFocus() {
       file.requestFocus();
       file.setCaretPosition(file.getText().length());
    }
 
-  /** Chargement de l'image ou des donnees */
+   /** Chargement de l'image ou des donnees */
    @Override
-public void submit() {
+   public void submit() {
       waitCursor();
       String f = file.getText().trim();
       f=aladin.getFullFileName(f);
@@ -430,29 +484,29 @@ public void submit() {
       } else creatLocalPlane(f,null,null,null,null,null,this);
    }
 
-  /** Nettoyage du formulaire */
+   /** Nettoyage du formulaire */
    @Override
-protected void clear() {
+   protected void clear() {
       file.setText("");
       tree.clear();
       super.clear();
    }
 
-  /** Reset du formulaire */
+   /** Reset du formulaire */
    @Override
-protected void reset() {
+   protected void reset() {
       if( tree!=null ) tree.resetCb();
    }
 
 
-  private static final String DEFAULT_FILENAME = "-";
+   private static final String DEFAULT_FILENAME = "-";
 
-  /** Gestion des evenements.
-   * Le bouton BROWSE permet d'afficher la fenetre de recherche des
-   * fichiers
-   */
+   /** Gestion des evenements.
+    * Le bouton BROWSE permet d'afficher la fenetre de recherche des
+    * fichiers
+    */
    @Override
-public void actionPerformed(ActionEvent e) {
+   public void actionPerformed(ActionEvent e) {
       Object s = e.getSource();
 
       // Affichage du selecteur de fichiers
@@ -480,8 +534,8 @@ public void actionPerformed(ActionEvent e) {
       // si on n'a pas changé le nom, on a selectionne un repertoire
       boolean isDir = false;
       if( name!=null && name.equals(DEFAULT_FILENAME) ) {
-          name = "";
-          isDir = true;
+         name = "";
+         isDir = true;
       }
       String t = (dir==null?"":dir)+(name==null?"":name);
       file.setText(t);
@@ -489,10 +543,10 @@ public void actionPerformed(ActionEvent e) {
    }
 
 
-  /** Chargement d'un fichier au format AJ
-   * @param in l'inputStream
-   * @return true si ok, false sinon
-   */
+   /** Chargement d'un fichier au format AJ
+    * @param in l'inputStream
+    * @return true si ok, false sinon
+    */
    protected boolean loadAJ(MyInputStream in) {
       boolean rep;
 
@@ -507,7 +561,7 @@ public void actionPerformed(ActionEvent e) {
       }
       if( !rep ) loadError=xmlParser.getError();
       aladin.view.findBestDefault();
-//      aladin.calque.activateAll();
+      //      aladin.calque.activateAll();
       aladin.view.setDefaultRepere();
       aladin.calque.repaintAll();
       return (rep && loadError==null );
@@ -536,34 +590,34 @@ public void actionPerformed(ActionEvent e) {
     * @param atts les attributs XML du tag VIEW
     * @return le viewMemoItem cree
     */
-    private ViewMemoItem creatViewMemoItemByAJ(Hashtable atts) {
-       ViewMemoItem vmi = new ViewMemoItem();
-       String s;
-       if( (s=(String)atts.get("zoom"))!=null )       vmi.zoom=Double.valueOf(s).doubleValue();
-       if( (s=(String)atts.get("xzoomView"))!=null )  vmi.xzoomView=Double.valueOf(s).doubleValue();
-       if( (s=(String)atts.get("yzoomView"))!=null )  vmi.yzoomView=Double.valueOf(s).doubleValue();
-       if( (s=(String)atts.get("rzoomWidth"))!=null ) vmi.rzoomWidth=Double.valueOf(s).doubleValue();
-       if( (s=(String)atts.get("rzoomHeight"))!=null )vmi.rzoomHeight=Double.valueOf(s).doubleValue();
-       if( (s=(String)atts.get("rvWidth"))!=null )    vmi.rvWidth=Integer.parseInt(s);
-       if( (s=(String)atts.get("rvHeight"))!=null )   vmi.rvHeight=Integer.parseInt(s);
-       if( (s=(String)atts.get("pref"))!=null )       vmi.pref=aladin.calque.getPlan(s,1);
-       if( (s=(String)atts.get("roi"))!=null
-         ||(s=(String)atts.get("locked"))!=null )     vmi.locked=(new Boolean(s)).booleanValue();
-       if( (s=(String)atts.get("northUp"))!=null )    vmi.northUp=(new Boolean(s)).booleanValue();
-//       if( (s=(String)atts.get("sync"))!=null )       vmi.sync=(new Boolean(s)).booleanValue();
-       return vmi;
-    }
+   private ViewMemoItem creatViewMemoItemByAJ(Hashtable atts) {
+      ViewMemoItem vmi = new ViewMemoItem();
+      String s;
+      if( (s=(String)atts.get("zoom"))!=null )       vmi.zoom=Double.valueOf(s).doubleValue();
+      if( (s=(String)atts.get("xzoomView"))!=null )  vmi.xzoomView=Double.valueOf(s).doubleValue();
+      if( (s=(String)atts.get("yzoomView"))!=null )  vmi.yzoomView=Double.valueOf(s).doubleValue();
+      if( (s=(String)atts.get("rzoomWidth"))!=null ) vmi.rzoomWidth=Double.valueOf(s).doubleValue();
+      if( (s=(String)atts.get("rzoomHeight"))!=null )vmi.rzoomHeight=Double.valueOf(s).doubleValue();
+      if( (s=(String)atts.get("rvWidth"))!=null )    vmi.rvWidth=Integer.parseInt(s);
+      if( (s=(String)atts.get("rvHeight"))!=null )   vmi.rvHeight=Integer.parseInt(s);
+      if( (s=(String)atts.get("pref"))!=null )       vmi.pref=aladin.calque.getPlan(s,1);
+      if( (s=(String)atts.get("roi"))!=null
+            ||(s=(String)atts.get("locked"))!=null )     vmi.locked=(new Boolean(s)).booleanValue();
+      if( (s=(String)atts.get("northUp"))!=null )    vmi.northUp=(new Boolean(s)).booleanValue();
+      //       if( (s=(String)atts.get("sync"))!=null )       vmi.sync=(new Boolean(s)).booleanValue();
+      return vmi;
+   }
 
 
-  /** Creation d'un plan courant (tag <PLANE>)
-   * @param atts les attributs XML du tag PLANE
-   * @return le plan cree
-   */
+   /** Creation d'un plan courant (tag <PLANE>)
+    * @param atts les attributs XML du tag PLANE
+    * @return le plan cree
+    */
    private Plan creatPlaneByAJ(Hashtable atts) {
       String s;
       String type = (String)atts.get("type");
       typePlan= Util.indexInArrayOf(type, Plan.Tp);
-      
+
       inFilter = inFitsHeader = inFilterScript = false;
       switch(typePlan) {
          case Plan.FILTER:
@@ -668,7 +722,7 @@ public void actionPerformed(ActionEvent e) {
          if( (s=(String)atts.get("activated"))!=null ) plan.active=plan.askActive = (new Boolean(s)).booleanValue();
          if( (s=(String)atts.get("selectable"))!=null ) plan.setSelectable( (new Boolean(s)).booleanValue() );
          if( plan instanceof PlanImage ) ((PlanImage)plan).orig = PlanImage.LOCAL;
-         
+
          // Mise en place de la calib et de la projection associee
          if( (s=(String)atts.get("proj"))!=null )   proj=Integer.parseInt(s);
          if( (s=(String)atts.get("calib"))!=null ) {
@@ -700,13 +754,14 @@ public void actionPerformed(ActionEvent e) {
          }
 
       }
+      plan.flagOk=true;
       return plan;
    }
 
-  /** Parse l'attribut XML de description de la CALIB Aladin et remplit
-   * les champs correspondants. Chaque valeur est separee par une simple ","
-   * Voir Save.java -> getXMLHeadPlan()
-   */
+   /** Parse l'attribut XML de description de la CALIB Aladin et remplit
+    * les champs correspondants. Chaque valeur est separee par une simple ","
+    * Voir Save.java -> getXMLHeadPlan()
+    */
    private void parseCalib(Calib c, String s) {
       StringTokenizer st = new StringTokenizer(s,",");
 
@@ -742,11 +797,11 @@ public void actionPerformed(ActionEvent e) {
       catch( Exception e1 ) { c.proj=Calib.SIN; }
    }
 
-  /** Parse un Polynome dans un attribut xml et retourne les coefficients
-   * sous la forme d'un tableau de double.
-   * Chaque valeur est separee par une simple ","
-   * Voir Save.java -> getXMLHeadPlan()
-   */
+   /** Parse un Polynome dans un attribut xml et retourne les coefficients
+    * sous la forme d'un tableau de double.
+    * Chaque valeur est separee par une simple ","
+    * Voir Save.java -> getXMLHeadPlan()
+    */
    private double[] parsePoly(String s) {
       StringTokenizer st = new StringTokenizer(s,",");
       double [] x = new double[st.countTokens()];
@@ -757,11 +812,11 @@ public void actionPerformed(ActionEvent e) {
    }
 
 
-  /** Parse une matrice 2x2 dans un attribut xml et retourne les coefficients
-   * sous la forme d'un tableau de double.
-   * Chaque valeur est separee par une simple ","
-   * Voir Save.java -> getXMLHeadPlan()
-   */
+   /** Parse une matrice 2x2 dans un attribut xml et retourne les coefficients
+    * sous la forme d'un tableau de double.
+    * Chaque valeur est separee par une simple ","
+    * Voir Save.java -> getXMLHeadPlan()
+    */
    private double[][] parseMat(String s) {
       StringTokenizer st = new StringTokenizer(s,",");
       double [][] x = new double[2][2];
@@ -772,22 +827,22 @@ public void actionPerformed(ActionEvent e) {
       return x;
    }
 
-  /** Interface XMLConsumer */
+   /** Interface XMLConsumer */
    public void startElement(String name, Hashtable atts) {
-           if( name.equals("ALADINJAVA") ) aladin.calque.FreeAll();
+      if( name.equals("ALADINJAVA") ) aladin.calque.FreeAll();
       else if( name.equals("PLANE") ) plan = creatPlaneByAJ(atts);
       else if( name.equals("TABLE") )  vField = new Vector(10);
       else if( name.equals("SCRIPT") ) inFilterScript =true;
       else if( name.equals("ORIRIGINALHEADERFITS") ) inFitsHeader=true;
       else if( name.equals("FILTER") ) inFilter=true;
-          
+
       else if( name.equals("FILTERS") ) {
          try {
             nFilter=0;
             plan.filters = new String[Integer.parseInt( (String)atts.get("nFilter"))];
             plan.filterIndex = Integer.parseInt( (String)atts.get("filterIndex"));
          } catch( Exception e ) { if( aladin.levelTrace>=3 ) e.printStackTrace(); }
-         
+
       } else if( name.equals("MODEVIEW") ) {
          firstView=0;
          String s;
@@ -798,7 +853,7 @@ public void actionPerformed(ActionEvent e) {
             // Pour compatibilité version <7
             if( (s=(String)atts.get("grid"))!=null )     aladin.calque.setOverlayFlag("grid", (new Boolean(s)).booleanValue() );
             if( (s=(String)atts.get("target"))!=null )   aladin.calque.setOverlayFlag("target", (new Boolean(s)).booleanValue() );
-            
+
             if( (s=(String)atts.get("overlay"))!=null )  aladin.calque.flagOverlay = (new Boolean(s)).booleanValue();
             if( (s=(String)atts.get("overlays"))!=null ) aladin.calque.setOverlayList(s);
          } catch( Exception e ) { if( aladin.levelTrace>=3 ) e.printStackTrace(); }
@@ -813,7 +868,7 @@ public void actionPerformed(ActionEvent e) {
          inValue=true;
          if( vField!=null && vField.size()>0 ) leg = new Legende(vField);
 
-      // Description de colonnes
+         // Description de colonnes
       } else if( name.equals("COLUMN") ) {
          Field f = new Field(atts);
          Enumeration e = atts.keys();
@@ -824,15 +879,15 @@ public void actionPerformed(ActionEvent e) {
          vField.addElement(f);
       }
    }
-   
+
    private Vector pdf = null;
 
-  /** Interface XMLConsumer */
+   /** Interface XMLConsumer */
    public void endElement(String name){
       if( name.equals("PLANE") ) {
 
          if( plan!=null ) {
-            
+
             // pour prendre en compte pas la suite les filtres dédiés
             if( plan.filters!=null && plan.filterIndex>=0 ) {
                if( pdf==null ) pdf = new Vector();
@@ -840,22 +895,22 @@ public void actionPerformed(ActionEvent e) {
             }
 
             // Post-traitement sur le plan CATALOG
-//            if( typePlan==Plan.CATALOG || typePlan==CATALOGTOOL ) plan.pcat.postJob(ra,de,rm,true);
+            //            if( typePlan==Plan.CATALOG || typePlan==CATALOGTOOL ) plan.pcat.postJob(ra,de,rm,true);
 
             // Post-traitement sur le plan IMAGE
             if( typePlan==Plan.IMAGE || typePlan==Plan.IMAGEMOSAIC
                   || typePlan==Plan.IMAGERSP || typePlan==Plan.IMAGEALGO) {
-            // Creation de la table des couleurs
+               // Creation de la table des couleurs
                PlanImage pi = (PlanImage)plan;
                pi.cm=ColorMap.getCM(pi.cmControl[0],pi.cmControl[1],pi.cmControl[2],
                      pi.video==PlanImage.VIDEO_INVERSE,
                      pi.typeCM,
                      pi.transfertFct);
-               pi.calculPixelsZoom(pi.getBufPixels8());
+               pi.calculPixelsZoom();
                pi.changeImgID();
             }
 
-	    // validation et memorisation
+            // validation et memorisation
             plan.flagOk = true;
             aladin.calque.addOnStack(plan);
             plan=null;
@@ -898,7 +953,7 @@ public void actionPerformed(ActionEvent e) {
                }
             }.start();
          }
-         
+
          // mise à jour des différents filtres dédiés mémorisés
          if( pdf!=null ) {
             new Thread("AladinFilterUpdate2") {
@@ -920,13 +975,13 @@ public void actionPerformed(ActionEvent e) {
       }
    }
 
-  /** Remplit le champ courant de la source courante
-   * Met a jour la variable de classe rec
-   * @param ch le tableau de caracteres a analyser
-   * @param cur l'indice du caractere courant
-   * @param end le dernier indice valide
-   * @return la nouvelle position dans ch[]
-   */
+   /** Remplit le champ courant de la source courante
+    * Met a jour la variable de classe rec
+    * @param ch le tableau de caracteres a analyser
+    * @param cur l'indice du caractere courant
+    * @param end le dernier indice valide
+    * @return la nouvelle position dans ch[]
+    */
    private int getSourceField(char [] ch, int cur, int end) {
       int start=cur;
       while( cur<end && ch[cur]!='\t' && ch[cur]!='\n' ) cur++;
@@ -935,14 +990,14 @@ public void actionPerformed(ActionEvent e) {
       return ch[cur]=='\t'?cur+1:cur;
    }
 
-  /** Cherche les infos de la source courante et ajoute l'objet correspondant
-   * au plan courant
-   * utilise la variable de classe rec
-   * @param ch le tableau de caracteres a analyser
-   * @param cur l'indice du caractere courant
-   * @param end le dernier indice valide
-   * @return la nouvelle position dans ch[]
-   */
+   /** Cherche les infos de la source courante et ajoute l'objet correspondant
+    * au plan courant
+    * utilise la variable de classe rec
+    * @param ch le tableau de caracteres a analyser
+    * @param cur l'indice du caractere courant
+    * @param end le dernier indice valide
+    * @return la nouvelle position dans ch[]
+    */
    private int getSource(char [] ch, int cur, int end) {
       double ra,de;
       String id;
@@ -964,24 +1019,24 @@ public void actionPerformed(ActionEvent e) {
 
       // Ajout de l'objet dans le plan courant
       Source o = (leg!=null)?new Source(plan,ra,de,id,rec,leg):
-                             new Source(plan,ra,de,id,rec);
-      
+         new Source(plan,ra,de,id,rec);
+
       // Cas particulier de sources dans un plan tool
       if( leg!=null && typePlan==CATALOGTOOL && ((PlanTool)plan).legPhot==null ) ((PlanTool)plan).legPhot=leg;
-      
+
       plan.pcat.setObjetFast(o);
 
       return cur;
    }
 
-  /** Cherche les infos du tool courante et ajoute l'objet correspondant
-   * au plan courant. Gere les suivis de tool (genre polylignes)
-   * Utilise la variable de classe rec
-   * @param ch le tableau de caracteres a analyser
-   * @param cur l'indice du caractere courant
-   * @param end le dernier indice valide
-   * @return la nouvelle position dans ch[]
-   */
+   /** Cherche les infos du tool courante et ajoute l'objet correspondant
+    * au plan courant. Gere les suivis de tool (genre polylignes)
+    * Utilise la variable de classe rec
+    * @param ch le tableau de caracteres a analyser
+    * @param cur l'indice du caractere courant
+    * @param end le dernier indice valide
+    * @return la nouvelle position dans ch[]
+    */
    private int getTool(char [] ch, int cur, int end) {
       double ra,de;
       int x,y;
@@ -991,10 +1046,10 @@ public void actionPerformed(ActionEvent e) {
       String typeTool=null;
       String id;
 
-       // On skippe un eventuel \r
+      // On skippe un eventuel \r
       while( cur<end && (ch[cur]=='\r' || ch[cur]=='\n') ) cur++;
 
-     // Recuperation du type, de l'info sur le suivant, de la position
+      // Recuperation du type, de l'info sur le suivant, de la position
       // en ra,de et en x,y ainsi que l'identificateur
       cur=getSourceField(ch,cur,end);	typeTool=rec;
       cur=getSourceField(ch,cur,end);	flagSuite=rec.equals("+"); flagSpecial=rec.equals("*");
@@ -1007,22 +1062,22 @@ public void actionPerformed(ActionEvent e) {
 
       // Ajout de l'objet dans le plan courant
       Position o=null;
-           if( typeTool.equals("tag") )       o = ( new Repere(plan) );   // Pour compatibilité avec les versions <7
+      if( typeTool.equals("tag") )       o = ( new Repere(plan) );   // Pour compatibilité avec les versions <7
       else if( typeTool.equals("text") )      o = ( new Tag(plan) );      // Pour compatibilité avec les versions <7
-           
+
       else if( typeTool.equals("phot") )      o = ( new Repere(plan) );
       else if( typeTool.equals("taglabel") )  o = ( new Tag(plan) );
       else if( typeTool.equals("line") )      o = ( new Ligne(plan) );
       else if( typeTool.equals("arrow") )     o = ( new Cote(plan) );
       else if( typeTool.equals("circle") ) {
-          if( circleCenter!=null ) {
-              double r = de-circleCenter.del;
-              o = new Cercle(plan, circleCenter, r);
-              circleCenter = null;
-          }
-          else {
-              circleCenter = new Coord(ra, de);
-          }
+         if( circleCenter!=null ) {
+            double r = de-circleCenter.del;
+            o = new Cercle(plan, circleCenter, r);
+            circleCenter = null;
+         }
+         else {
+            circleCenter = new Coord(ra, de);
+         }
       }
       if( o!=null ) {
          o.raj=ra; o.dej=de;
@@ -1037,7 +1092,7 @@ public void actionPerformed(ActionEvent e) {
                ((Ligne)o).debligne = (Ligne)prevO;
             }
          } catch( Exception e ) { }
-         
+
          // Fin d'un polygone
          try {
             if( flagSpecial ) ((Ligne)o).bout=3;
@@ -1054,44 +1109,44 @@ public void actionPerformed(ActionEvent e) {
       return cur;
    }
 
-  /** Cherche les pixels RGB de l'image et l'associe au plan courant.
+   /** Cherche les pixels RGB de l'image et l'associe au plan courant.
     * Cette procedure peut etre appelee plusieurs fois en sequence.
     * @param ch le tableau de caracteres a analyser
     * @param cur l'indice du caractere courant
     * @param end le dernier indice valide
     */
-    private void getImageRGB(char [] ch, int start, int length) {
-       PlanImageRGB p = (PlanImageRGB)plan;
+   private void getImageRGB(char [] ch, int start, int length) {
+      PlanImageRGB p = (PlanImageRGB)plan;
 
-       // Premier bloc de pixels => initialisations
-       if( rgb==null ) {
-          rgb = new byte[p.width * p.height * 3];
-          pOffset=0;
-       }
+      // Premier bloc de pixels => initialisations
+      if( rgb==null ) {
+         rgb = new byte[p.width * p.height * 3];
+         pOffset=0;
+      }
 
-       // Traitement du bloc courant
-       pOffset=Save.get64(rgb,pOffset,ch,start,length);
+      // Traitement du bloc courant
+      pOffset=Save.get64(rgb,pOffset,ch,start,length);
 
-       // C'est fini ?
-       if( pOffset==p.width*p.height*3 ) {
-          p.setByteRGB(rgb);
-          p.cm = ColorModel.getRGBdefault();
-          for( int i=0; i<3; i++ ) p.filterRGB(p.cmControl, i);
-          p.flagRed=p.flagGreen=p.flagBlue=true;
-          rgb=null;
-          pOffset=0;
-       }
-    }
+      // C'est fini ?
+      if( pOffset==p.width*p.height*3 ) {
+         p.setByteRGB(rgb);
+         p.cm = ColorModel.getRGBdefault();
+         for( int i=0; i<3; i++ ) p.filterRGB(p.cmControl, i);
+         p.flagRed=p.flagGreen=p.flagBlue=true;
+         rgb=null;
+         pOffset=0;
+      }
+   }
 
-    byte [] rgb=null;
-    int pOffset=0;   // offset courant dans p.pixels (bloc/bloc)
+   byte [] rgb=null;
+   int pOffset=0;   // offset courant dans p.pixels (bloc/bloc)
 
-      /** Cherche les pixels de l'image et l'associe au plan courant.
-   * Cette procedure peut etre appelee plusieurs fois en sequence.
-   * @param ch le tableau de caracteres a analyser
-   * @param cur l'indice du caractere courant
-   * @param end le dernier indice valide
-   */
+   /** Cherche les pixels de l'image et l'associe au plan courant.
+    * Cette procedure peut etre appelee plusieurs fois en sequence.
+    * @param ch le tableau de caracteres a analyser
+    * @param cur l'indice du caractere courant
+    * @param end le dernier indice valide
+    */
    private void getImage(char [] ch, int start, int length) {
       PlanImage p = (PlanImage)plan;
 
@@ -1109,9 +1164,9 @@ public void actionPerformed(ActionEvent e) {
    Hashtable pFilter;
    /** Mise en place du script sur le plan filtre en cours de construction */
    private void setScript(String script) {
-   	  // décodage des entités spéciales
+      // décodage des entités spéciales
       // PF SEPT 07 - JE COMMENTE PARCE QUE CELA A DEJA ETE APPLIQUE EN AMONT
-//   	  script = XMLParser.XMLDecode(script);
+      //   	  script = XMLParser.XMLDecode(script);
 
       if( pFilter==null ) {
          pFilter = new Hashtable();
@@ -1123,11 +1178,11 @@ public void actionPerformed(ActionEvent e) {
       pFilter.put(plan, script);
 
    }
-   
+
    // Type de plan modifié pour prendre en compte les catalogues inclues dans les tools
    static final int CATALOGTOOL = 1000;
 
-  /** Interface XMLConsumer */
+   /** Interface XMLConsumer */
    public void characters(char ch[], int start, int length){
       int cur = start;		// Current character
       int end = start+length;	// Last character
@@ -1160,8 +1215,8 @@ public void actionPerformed(ActionEvent e) {
                break;
          }
       } else if( inFilterScript ) {
-      	 // thomas, 22/11/06 : les sauts de ligne ont été remplacés par un "\n" dans le .aj
-      	 //Il faut donc les décoder
+         // thomas, 22/11/06 : les sauts de ligne ont été remplacés par un "\n" dans le .aj
+         //Il faut donc les décoder
          setScript(new String(ch,start,length).replaceAll("\\\\n", "\n"));
       } else if( inFitsHeader ) {
          if( ((PlanImage)plan).headerFits==null ) {
